# rust-ci-workshop

./: .gitignore  Dockerfile  flake.nix  justfile
.github/workflows/: release.yaml  test.yaml
docs/: index.html  index.md
helloworld/: Cargo.toml  build.rs  helloworld-tutorial.md
helloworld/src/: client.rs  server.rs
scripts/: deps.sh
slides/: index.md
